# fnpy

./: .gitmodules  CMakeLists.txt
cmake/: add_cpp_test.cmake
src/: CMakeLists.txt  c_string_t_mod.f90  fnpy.interface.f90  fnpy_cpp_interface.cpp  fnpy_cpp_interface.hpp
src/tests/: CMakeLists.txt  fnpy.test.f90
